src/test/compile-fail/fail-simple.rs
// -*- rust -*-

// error-pattern: after expression but found
fn main() {
  fail @ ;
}
